--- a/style.css
+++ b/style.css
@@ -1,29 +1,30 @@
-﻿* {margin:0;padding:0;}
+﻿* {margin:;padding:0;}
 body {background-color:;font-family:'Arial';
 background-image:url(images/fon.jpg);
-background-position: top right;
+background-position: top;
 background-repeat: no-repeat;
-background-size: cover;
+background-size: 95%;
 }
 .header {
-    margin-left:auto;
-    margin-right:auto;
+	margin-top:6%;
+    margin-left:-36%;
+    margin-right:;
     margin-bottom:10px;
     width:100%;
     height:15%;
-    border:1px solid #000000;
-    background: #;
+    border:1px solid #;
+    background: ;
 	background-image: url(images/logo.jpg);
 	background-repeat: no-repeat;
     }
 .pages { 
     margin-left:auto; 
     margin-right:auto; 
-    width:1000px;
+    width:90%;
     }
 .content {
     margin-right:10px;
-    width:806px;
+    width:80px;
     height:450px;
     border:1px solid #000000;
     background: #;
@@ -43,10 +44,46 @@ background-size: cover;
     margin-top:10px;
     margin-left:auto;
     margin-right:auto;
-    width:1000px;
+    width:80px;
     height:50px;
     border:1px solid #000000;
-    background: #333399;
+    background: #;
     }
+	
+	a.buttonns {
+  padding: 3px 14px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.701961) 0px 5px 12px;
+   -webkit-transform-origin: 50% 1px;
+   -webkit-transition: all 0.15s ease-in-out;
+  background:  #161616;
+  border-color: rgba(255, 255, 255, 0.027451) #FF8C39 rgba(255, 255, 255, 0.027451) rgba(255, 255, 255, 0.027451);
+   border-style: solid;
+  border-width: 1px 4px 1px 1px;
+  box-shadow: rgba(0, 0, 0, 0.701961) 0px 5px 12px;
+  color: #555;
+  display:block;
+  width:90px;
+  font-family: Open Sans, Sans-serif;
+  border-radius: 5px;
+   font-size: 13px;
+  letter-spacing: 4px;
+  text-shadow: rgb(0, 0, 0) 0px 1px 1px;
+  line-height: 30px;
+  position: relative;
+ margin: 20px auto;
+  text-align: center;
+  text-decoration:none;
+}
+a.buttonns:hover {
+  cursor: pointer;
+  opacity: 0.9;
+  border-width: 1px 7px 1px 1px;
+}
+a.buttonns:active {
+-webkit-box-shadow:inset rgba(0, 0, 0, 0.701961) 0px 7px 12px,rgba(0, 0, 0, 0.701961) 0px 2px 12px  ;
+text-shadow: rgb(0, 0, 0) 0px -2px 1px;
+margin-top: 1px;
+}
+
 	
 	
