--- a/style.css
+++ b/style.css
@@ -1,18 +1,29 @@
-﻿* {margin:;padding:0;}
+﻿* {margin:0;padding:0;}
 body {background-color:;font-family:'Arial';
+margin-top:0px;
 background-image:url(images/fon.jpg);
-background-position: top;
+background-position: center;
 background-repeat: no-repeat;
-background-size: 95%;
+background-size: 100%;
 }
+
+
+header .phone {float:right;margin-top:30px;font-size:30px;font-family:'Arial';color:#ADFF2F;}
+
+nav {clear:both;height:6px;background-color:;border-radius:8px 8px 0px 0px;}
+nav ul {list-style:none;}
+nav ul li {float:left;margin:17px 20px;font-size:20px;font-family:'Georgia';font-style:italic;}
+nav ul li a {color:#f7f6c5;text-decoration:none;}
+nav ul li a:hover {text-decoration:underline;}
+
 .header {
-	margin-top:6%;
-    margin-left:-36%;
+	margin-top:0%;
+    margin-left:0%;
     margin-right:;
-    margin-bottom:10px;
+    margin-bottom:7%;
     width:100%;
     height:15%;
-    border:1px solid #;
+    border:1px solid #001111;
     background: ;
 	background-image: url(images/logo.jpg);
 	background-repeat: no-repeat;
@@ -27,7 +38,7 @@ background-size: 95%;
     width:80px;
     height:450px;
     border:1px solid #000000;
-    background: #;
+    background: ;
     float:left;
     }
 .sidebar {
@@ -36,6 +47,7 @@ background-size: 95%;
     border:1px solid #000000;
     background: #;
     float:left;
+	box-shadow:0 0 0 1200px rgba(0, 0, 0, 0.33) inset;
     }
 .foot {
     clear:both;
@@ -55,7 +67,7 @@ background-size: 95%;
   -webkit-box-shadow: rgba(0, 0, 0, 0.701961) 0px 5px 12px;
    -webkit-transform-origin: 50% 1px;
    -webkit-transition: all 0.15s ease-in-out;
-  background:  #161616;
+  background:  ;
   border-color: rgba(255, 255, 255, 0.027451) #FF8C39 rgba(255, 255, 255, 0.027451) rgba(255, 255, 255, 0.027451);
    border-style: solid;
   border-width: 1px 4px 1px 1px;
@@ -65,7 +77,7 @@ background-size: 95%;
   width:90px;
   font-family: Open Sans, Sans-serif;
   border-radius: 5px;
-   font-size: 13px;
+   font-size: 19px;
   letter-spacing: 4px;
   text-shadow: rgb(0, 0, 0) 0px 1px 1px;
   line-height: 30px;
