--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-﻿* {margin:0;padding:0;}
+* {margin:0;padding:0;}
 body {background-color:;font-family:'Arial';
 margin-top:0px;
 background-image:url(images/fon.jpg);
