--- a/style.css
+++ b/style.css
@@ -1,101 +1,304 @@
-* {margin:0;padding:0;}
-body {background-color:;font-family:'Arial';
-margin-top:0px;
-background-image:url(images/fon.jpg);
-background-position: center;
-background-repeat: no-repeat;
-background-size: 100%;
+﻿
+/*** Mixins & Default Styles ***/
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-
-header .phone {float:right;margin-top:30px;font-size:30px;font-family:'Arial';color:#ADFF2F;}
-
-nav {clear:both;height:6px;background-color:;border-radius:8px 8px 0px 0px;}
-nav ul {list-style:none;}
-nav ul li {float:left;margin:17px 20px;font-size:20px;font-family:'Georgia';font-style:italic;}
-nav ul li a {color:#f7f6c5;text-decoration:none;}
-nav ul li a:hover {text-decoration:underline;}
-
-.header {
-	margin-top:0%;
-    margin-left:0%;
-    margin-right:;
-    margin-bottom:7%;
-    width:100%;
-    height:15%;
-    border:1px solid #001111;
-    background: ;
-	background-image: url(images/logo.jpg);
-	background-repeat: no-repeat;
-    }
-.pages { 
-    margin-left:auto; 
-    margin-right:auto; 
-    width:90%;
-    }
-.content {
-    margin-right:10px;
-    width:80px;
-    height:450px;
-    border:1px solid #000000;
-    background: ;
-    float:left;
-    }
-.sidebar {
-    width:180px;
-    height:450px;
-    border:1px solid #000000;
-    background: #;
-    float:left;
-	box-shadow:0 0 0 1200px rgba(0, 0, 0, 0.33) inset;
-    }
-.foot {
-    clear:both;
-    }
-.footer {
-    margin-top:10px;
-    margin-left:auto;
-    margin-right:auto;
-    width:80px;
-    height:50px;
-    border:1px solid #000000;
-    background: #;
-    }
-	
-	a.buttonns {
-  padding: 3px 14px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.701961) 0px 5px 12px;
-   -webkit-transform-origin: 50% 1px;
-   -webkit-transition: all 0.15s ease-in-out;
-  background:  ;
-  border-color: rgba(255, 255, 255, 0.027451) #FF8C39 rgba(255, 255, 255, 0.027451) rgba(255, 255, 255, 0.027451);
-   border-style: solid;
-  border-width: 1px 4px 1px 1px;
-  box-shadow: rgba(0, 0, 0, 0.701961) 0px 5px 12px;
-  color: #555;
-  display:block;
-  width:90px;
-  font-family: Open Sans, Sans-serif;
-  border-radius: 5px;
-   font-size: 19px;
-  letter-spacing: 4px;
-  text-shadow: rgb(0, 0, 0) 0px 1px 1px;
-  line-height: 30px;
-  position: relative;
- margin: 20px auto;
-  text-align: center;
-  text-decoration:none;
+::-webkit-scrollbar {
+  display: none;
 }
-a.buttonns:hover {
+
+/*** Color Variables ***/
+/*** Centering Hack ***/
+/*** Header Styles ***/
+header {
+  width: 100vw;
+  height: 100vh;
+  background: #5661F2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+/*** Navigation Styles ***/
+nav {
+  width: 100vw;
+  height: 160px;
+  background-image: url(images/logo.png) ;
+  background-repeat: no-repeat;
+  background-position: left-top;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  position: fixed;
+  z-index: 10;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+nav.navShadow {
+  -webkit-box-shadow: 0 4px 30px -5px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 4px 30px -5px rgba(0, 0, 0, 0.2);
+  height: 100px;
+}
+nav.navShadow #word-mark {
+  opacity: 0;
+}
+
+#brand,
+#menu,
+ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#brand {
+  padding-left: 40px;
+}
+
+#logo {
+  width: 100%;
+height:100%;
+  background-image: url(images/logo.jpg);
+  background-size:cover;
+  border-radius: 50%;
   cursor: pointer;
-  opacity: 0.9;
-  border-width: 1px 7px 1px 1px;
-}
-a.buttonns:active {
--webkit-box-shadow:inset rgba(0, 0, 0, 0.701961) 0px 7px 12px,rgba(0, 0, 0, 0.701961) 0px 2px 12px  ;
-text-shadow: rgb(0, 0, 0) 0px -2px 1px;
-margin-top: 1px;
 }
 
+#word-mark {
+  width: 120px;
+  height: 20px;
+  background: #fff;
+  border-radius: 90px;
+  margin-left: 20px;
+  opacity: 0;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+/*** Menu Styles ***/
+#menu {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding-right: 40px;
+}
+
+li {
+  margin-left: 20px;
+}
+li a {
+  width: 80px;
+  height: 20px;
+  background: #fff;
+  display: block;
+  border-radius: 90px;
+}
+
+#menu-toggle {
+  width: 55px;
+  height: 55px;
+  background: #2ea8ee;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 50%;
+  cursor: pointer;
+  display: none;
+}
+#menu-toggle:hover .bar {
+  width: 25px;
+}
+#menu-toggle.closeMenu .bar {
+  width: 25px;
+}
+#menu-toggle.closeMenu .bar:first-child {
+  -webkit-transform: translateY(7px) rotate(45deg);
+          transform: translateY(7px) rotate(45deg);
+}
+#menu-toggle.closeMenu .bar:nth-child(2) {
+  -webkit-transform: scale(0);
+          transform: scale(0);
+}
+#menu-toggle.closeMenu .bar:last-child {
+  -webkit-transform: translateY(-7px) rotate(-45deg);
+          transform: translateY(-7px) rotate(-45deg);
+}
+
+.bar {
+  width: 25px;
+  height: 2px;
+  background: #fff;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+.bar:nth-child(2) {
+  width: 20px;
+  margin: 5px 0;
+}
+.bar:last-child {
+  width: 15px;
+}
+
+/*** Hero Section Styles ***/
+#hero-section {
+	background-image:url(images/fon.jpg);
+	background-size:cover;
+	background-position:top;
+  width: 100%;
+  height: calc(100%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top:;
+}
+
+#head-line {
 	
+  width: 520px;
+  height: 30px;
+  background: #fff;
+  border-radius: 90px;
+  position: relative;
+}
+#head-line:before, #head-line:after {
+	
+  content: '';
+  height: 30px;
+  border-radius: 90px;
+}
+#head-line:before {
+	
+  width: 360px;
+  background: #fff;
+  position: absolute;
+  top: -60px;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+}
+#head-line:after {
+	
+  width: 200px;
+  background: #fff;
+  position: absolute;
+  left: 50%;
+  bottom: -60px;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+}
+
+/*** Section Styles ***/
+section {
+	
+  width: 100vw;
+  height: calc(100vh - 100px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+section:nth-child(odd) {
+	background-image:url(images/fon3.jpg);
+	background-size:cover;
+	background-position:top;
+  background: ;
+}
+section:nth-child(even) {
+ background-image:url(images/fon1.jpg);
+	background-size:cover;
+	background-position:top;
+}
+
+
+#heading {
+	 
+  width: 120px;
+  height: 20px;
+  background: #fff;
+  border-radius: 90px;
+  margin-top: 40px;
+}
+
+/*** Responsive Menu For Smaller Device ***/
+@media screen and (max-width: 767px) {
+  #menu-toggle {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+
+  ul {
+	  
+    display: inline-block;
+    width: 100vw;
+    height: 0;
+    background: #79EDFC;
+    position: absolute;
+    top: 160px;
+    -webkit-transform: translate(, );
+            transform: translate(, );
+    -webkit-box-shadow: 0 5px 30px -4px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 5px 30px -4px rgba(0, 0, 0, 0.2);
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+  }
+  ul.showMenu {
+    height: 250px;
+  }
+  ul.showMenu li {
+    height: 80px;
+    opacity: 1;
+    visibility: visible;
+  }
+
+  li {
+    width: 50%;
+    height: 80px;
+    float: left;
+    padding-left: 40px;
+    opacity: 0;
+    visibility: hidden;
+    margin-left: 0;
+    -webkit-transition: all 0.3s 0.1s;
+    transition: all 0.3s 0.1s;
+  }
+  li:first-child, li:nth-child(2) {
+    margin-top: 80px;
+  }
+
+  #head-line {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+  }
+}
+#youtube {
+  position: fixed;
+  right: 2vw;
+  bottom: 2vh;
+  font-size: 30px;
+  color: #fff;
+}
+
+
+
 	
